--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "authors": [
         {
-            "name": "Sacha FARINEL",
+            "name": "Sacha FARINEL 1",
             "email": "sacha.farinel@groupe-soledis.com"
         }
     ],
